# ai_agent_company_research

./: .gitignore  architecture.drawio  gemini.drawio  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
back/: clean.sh  pyproject.toml  run.sh
back/.devcontainer/: Dockerfile  Dockerfile.prd  devcontainer.json  docker-compose.yml
back/.devcontainer/postgres/: Dockerfile
back/.devcontainer/postgres/init/: 000_config.sql  001_init.sql
back/app/: __init__.py  how_to_use_util.py  main.py
back/app/api/v1/routers/: company_router.py  rag_router.py
back/app/core/: config.py
back/app/crawl/: gbiz.py
back/app/data/: load_corporate_site.py  load_gbiz.py  load_houjin_bangou.py
back/app/db/: models.py  session.py
back/app/db/crud/: cache.py  common.py  corporate_site.py  houjin_bangou.py
back/app/nayose/: nayose.py
back/app/rag/: any_search.py  business.py  company_overview.py  competitor.py  employee.py  hr.py  philosophy.py  rag.py  sales.py  swot.py
back/app/util/: bs.py  domain.py  gemini.py  geocoding.py  search.py  tidy_response.py
back/not_working/: sample2.py  sample3.py  sample4.py  sample5.py
back/sample/: gemini_sample.py  gemini_sample_with_grounding.py  google_search.py  splash_sample.py
front/: package-lock.json  package.json  run.sh  vite.config.ts
front/.devcontainer/: Dockerfile  Dockerfile.prd  devcontainer.json  docker-compose.yml
geocoding/: README.md  index.js  package-lock.json  package.json
geocoding/ansible/: inventory_file  playbook.yml
geocoding/dockerfiles/: Dockerfile  (+2 more)
(+12 files in other folders)
