[tool.poetry]
name = "ai-agent-company-research"
version = "0.1.0"
description = ""
authors = ["gepuro <gepuro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
httpx = "^0.28.1"
google-generativeai = "^0.8.3"
google-genai = "^0.3.0"
google-cloud-aiplatform = "^1.75.0"
google-api-python-client = "^2.156.0"
beautifulsoup4 = "^4.12.3"
markitdown = "^0.0.1a3"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
sqlalchemy = "^2.0.36"
loguru = "^0.7.3"
timeout-executor = "^0.9.1"
pandas = "^2.2.3"
duckduckgo-search = "^7.1.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
